# Desk1_rs

./: .crates.toml  .crates2.json  .gitignore  Cargo.toml  Dockerfile  Makefile  compose.yaml  service-list.txt
analysis/: Cargo.toml
analysis/src/: abstract_data.rs  lib.rs
analysis/src/abstract_data/: abstract_classes.rs
src/PortfolioPredictions/: Cargo.toml
src/PortfolioPredictions/src/: lib.rs
src/analysis/: Cargo.toml  Dockerfile
src/analysis/src/: lib.rs  main.rs
src/analysis/src/abstract_data/: abstract_classes.rs
src/portfolio_predictions/: Cargo.toml  README.md
src/portfolio_predictions/src/: analysis.rs  lib.rs  main.rs
src/portfolio_predictions/src/analysis/: analysis.rs  mod.rs
src/portfolio_predictions/src/analysis/abstract_data/: mod.rs
src/portfolio_predictions/src/analysis/api/: api.rs
src/portfolio_predictions/src/predictor/: api.rs  mod.rs  mssa.rs
src/portfolio_predictions/src/predictor/analysis/: analysis.rs  api.rs  mod.rs
