[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.27.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas"]}
nalgebra = "0.32.2"
num-traits = "0.2.15"
simba = "0.8.0"
